--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1435,7 +1435,7 @@ img {
 .img-responsive,
 .thumbnail a>img,
 .thumbnail>img {
-    display: block;
+    width: 270px;
     max-width: 100%;
     height: auto
 }
