--- a/style épuré/bootstrap.css
+++ b/style épuré/bootstrap.css
@@ -477,7 +477,9 @@ input[type=submit].btn-block {
 .collapse {
     display: none
 }
-
+.collapse.in {
+    display: block
+}
 .nav {
     padding-left: 0;
     margin-bottom: 0;
@@ -533,7 +535,9 @@ input[type=submit].btn-block {
     -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, .1);
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, .1)
 }
-
+.navbar-collapse.in {
+    overflow-y: auto
+}
 @media (min-width:768px) {
     .navbar-collapse {
         width: auto;
