--- a/cleanstyle/font-awesome.css
+++ b/cleanstyle/font-awesome.css
@@ -45,7 +45,13 @@
 .fa-chevron-up:before {
     content: "\f077"
 }
+.fa-chevron-left:before {
+    content: "\f053"
+}
 
+.fa-chevron-right:before {
+    content: "\f054"
+}
 .fa-twitter:before {
     content: "\f099"
 }
